# sliderule-cli

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  make.cmd  make.sh
src/: main.rs
templates/: .sr.liquid  README.md.liquid  bom_data.yaml.liquid  package.json.liquid
tests/: management.rs
