[package]
name = "sliderule-cli"
version = "0.3.1"
authors = ["Jeremy Wright <wrightjmf@gmail.com>"]

[dependencies]
# sliderule = { path = "../sliderule-rs" }
sliderule = { git = "https://github.com/7bindustries/sliderule-rs" }
argparse = "0.2.2"
os_info = "1.0.3"
rpassword = "2.1.0"

[dev-dependencies]
git2 = "0.8"
uuid = { version = "0.7", features = ["v4"] }
os_info = "1.1.0"
